@@ -56,3 +56,5 @@ examples/feedback.pl
 examples/xachlego.pl
 examples/xachshadow.pl
 examples/parasite-editor
+examples/scratches.pl
+examples/blowinout.pl
