@@ -116,7 +116,8 @@ EOF
 
 @examples =
    qw(windy.pl prep4gif.pl webify.pl PDB alpha2color.pl tex-to-float ditherize.pl
-      border.pl view3d.pl feedback.pl xachlego.pl xachshadow.pl parasite-editor);
+      border.pl view3d.pl feedback.pl xachlego.pl xachshadow.pl parasite-editor
+      scratches.pl blowinout.pl);
 @shebang = (map("examples/$_",@examples),
    qw(Perl-Server scm2perl scm2scm examples/example-net.pl examples/homepage-logo.pl
       examples/example-fu.pl));
